--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
 <input type="submit"  >click me
 
 <BR></BR>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/a6cJAFFQn_I?si=zqzSafcPsyS8lKbS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/a6cJAFFQn_I?si=zqzSafcPsyS8lKbS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen muted="" autoplay="" postar=""></iframe>
 <BR></BR>
 <iframe width="560" height="400" src="https://www.youtube.com/embed/ZAkr0KFFLLs?si=hr3fP7bwCe3tQQ1x" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<br><br>
+
 </body>
 </html>
